slashies-macros/tests/command/e04_invalid_docstring_on_struct.stderr
error: Invalid description docstring
 --> tests/command/e04_invalid_docstring_on_struct.rs:5:1
  |
5 | #[doc]
  | ^^^^^^

error: attribute must be of the form `#[doc(hidden|inline|...)]` or `#[doc = "string"]`
 --> tests/command/e04_invalid_docstring_on_struct.rs:5:1
  |
5 | #[doc]
  | ^^^^^^
  |
  = note: `#[deny(ill_formed_attribute_input)]` on by default
  = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
  = note: for more information, see issue #57571 <https://github.com/rust-lang/rust/issues/57571>
